<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditFragment">

<!--Start-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_goneMarginTop="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/homeTitleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_weight=".9"
                android:text="Home Title"
                android:textSize="12pt" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/homeTitle"
                android:src="@mipmap/ic_launcher"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>


        <TextView
            android:id="@+id/homeDescLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:textSize="8pt"
            android:text="Reminders" />

        <EditText
            android:id="@+id/homeRemindersEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_goneMarginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/keywordsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight=".0"
                android:layout_gravity="center"
                android:textSize="8pt"
                android:text="@string/roommates" />

            <EditText
                android:id="@+id/homeRoommatesEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                android:autofillHints="Enter list separated by comma ','" />

        </LinearLayout>

    </LinearLayout>

<!--End-->
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cancel"
        app:layout_constraintStart_toEndOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submit"
        app:layout_constraintBottom_toBottomOf="@+id/submit" />


</androidx.constraintlayout.widget.ConstraintLayout>