<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeListRecycleViewFragment">


    <fragment
        android:id="@+id/homeListRecycleViewFragment"
        android:name="edu.bu.homies.fragments.HomeListRecycleViewFragment"
        android:label="HomeListRecycleViewFragment">
        <action
            android:id="@+id/action_homeListRecycleViewFragment_to_detailFragment"
            app:destination="@id/detailFragment" >
            <argument
                android:name="homeId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="edu.bu.homies.fragments.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="homeId"
            app:argType="integer"
            android:defaultValue="0"/>
        <action
            android:id="@+id/action_detailFragment_to_editFragment"
            app:destination="@id/editFragment">
            <argument
                android:name="homeId"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="edu.bu.homies.fragments.EditFragment"
        android:label="fragment_edit"
        tools:layout="@layout/fragment_edit" >
        <argument
            android:name="homeId"
            app:argType="integer"
            android:defaultValue="0"/>
        <action
            android:id="@+id/action_editFragment_pop"
            app:popUpTo="@id/editFragment"
            app:popUpToInclusive="true" >

        </action>

    </fragment>
</navigation>