...
                android:src="@mipmap/ic_launcher"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/homeDesc"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:textSize="8pt"-->
<!--            android:text="Home Description" />-->
...

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/editHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

...
